# mb173vitaJVM

./: .gitignore  CMakeLists.txt  README.md  constant_pool.c  constant_pool.h  interfaces.c  interfaces.h  main.c  minecraft_log.txt  util.c  util.h
.kdev4/: mb173vitaJVM.kdev4
loader/: attributes.c  attributes.h  constant_pool.c  constant_pool.h  fields.c  fields.h  interfaces.c  interfaces.h  loader.c  loader.h  method.c  method.h
output/: main
src/: heap.c  heap.h  init.c  init.h  main.c  method_area.c  method_area.h  runtime.c  runtime.h  thread.h  util.c  util.h
src/frame/: frame.c  frame.h  stacks.c  stacks.h
src/interpreter/: opcodes.c  opcodes.h  opcodes_utils.c  opcodes_utils.h  runtime.c  runtime.h
src/jvm_init/: class_loader.c  class_loader.h  init.c  init.h  jvm_preparation.c  jvm_preparation.h
src/loader/: attributes.c  attributes.h  constant_pool.c  constant_pool.h  fields.c  fields.h  interfaces.c  interfaces.h  loader.c  loader.h  method.c  method.h
test/: Add.class.bak2  Add.java
